test_regress/t/t_cover_sequence_unsup.out
%Warning-COVERIGN: t/t_cover_sequence_unsup.v:19:21: Ignoring unsupported: cover sequence with this ranged cycle delay
   19 |   cover sequence (a ##[1:2] (b ##1 c));
      |                     ^~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_cover_sequence_unsup.v:22:21: Ignoring unsupported: cover sequence with this ranged cycle delay
   22 |   cover sequence (a ##[1:300] b);
      |                     ^~
%Warning-COVERIGN: t/t_cover_sequence_unsup.v:25:21: Ignoring unsupported: cover sequence with a ranged goto repetition
   25 |   cover sequence (a [-> 2: 3]);
      |                     ^~~
%Error: Exiting due to
